@@ -1,6 +1,8 @@
 CHANGELOG 10SEP23 v0.60.1:
 > Updated Readme
 > Fixed polymorphic support in x86 executables
+> Fixed CMAKE causing errors when building x86 executables
+
 
 CHANGELOG 13AUG23 v0.60.0:
 > Implemented GhostFart Unhooking
